--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,15 @@
 body{
     max-width: 425px;
 }
+
+header{
+    display: flex;
+    justify-content: ;
+    width: 100%;
+    height: 200px;
+    background-color: black;
+}
+
+header img{
+    width: 100px;
+}
