--- a/css/index.css
+++ b/css/index.css
@@ -8,17 +8,137 @@ body{
     max-width: 425px;
 }
 
+
 header{
     display: flex;
-    justify-content: ;
+    align-items: center;
+    justify-content:space-between ;
     width: 100%;
-    height: 200px;
-    background-color: black;
+    height: 50px;
+    background-color: rgb(151, 29, 151);
+    padding: 0 20px;
+    
+}
+
+header a{
+    color: black;
 }
 
 header img{
-    width: 100px;
+    width: 50px;
 }
+
+.banner img {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 main {
-    pedro add 
+    padding: 0px 10px;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap; 
+    margin-bottom: 10px;
+    background-image: url("../img/bannergames.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 10px 0;
+}
+
+
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    width: 300px;
+    height: 400px;
+    border: 1px solid whitesmoke;
+    margin-top: 20px;
+    background-color: rgb(66, 2, 66);
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px purple;
+}
+
+h2 {
+    text-align: center;
+}
+
+.card-content{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 190px;
+    color: Pink;
+}
+
+.card-text{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 280px;
+    height: 180px;
+    text-align: center;
+    margin-top: 10px;
+    padding: 10px 0px;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.5;
+    color: white;
+    border-radius: 10px;
+}
+
+button{
+display: flex;
+position: relative;
+flex-wrap: wrap;
+width: 80px;
+height: 20px;
+top: -30px;
+border-radius: 10px;
+
+}
+
+button a{
+    text-align: center;
+    text-decoration: none;
+}
+
+.cards img{
+    display: flex;
+    width: 100%;
+    height: 150px;
+    border-radius: 10px;
+}
+
+footer{
+    display: flexbox;
+    align-items: center;
+    justify-content:flex-start ;
+    width: 100%;
+    height: 200px;
+    background-color:  rgb(151, 29, 151);
+    padding: 0 20px;
+    gap: 10px;
+}
+
+
+
+footer img{
+    width: 15px;
 }
