--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
 
 body{
     max-width: 425px;
+    font-family: 'roboto', sans-serif;
 }
 
 
@@ -17,7 +18,6 @@ header{
     height: 50px;
     background-color: rgb(151, 29, 151);
     padding: 0 20px;
-    
 }
 
 header a{
@@ -28,11 +28,56 @@ header img{
     width: 50px;
 }
 
-.banner img {
+.container-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner{
     width: 100%;
     height: 100vh;
+    background-image: url("../img/bannergames.webp");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
+}
+
+h1{
+    text-align: center;
+    background-color:  rgb(151, 29, 151);;
+    color: black;
+    border-top:2px solid black;
+}
+
+.start{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    flex-wrap: wrap;
+    top: 400px;
+    width: 50%;
+    left: 100px;
+}
+
+#start{
+    color: red;
+    background-color: rgba(0, 0, 0, 0);
+    border-top: 0;
+    width: 300px;
+    text-align: left;
+    font-size: 25px;
+
+}
+
+.start p{
+    color: white;
+    position: absolute;
+    width: 200px;
+    top: 40px;
+    left: 0px;
 }
 
 main {
@@ -66,7 +111,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     width: 300px;
-    height: 400px;
+    height: 410px;
     border: 1px solid whitesmoke;
     margin-top: 20px;
     background-color: rgb(66, 2, 66);
@@ -76,6 +121,7 @@ main {
 
 h2 {
     text-align: center;
+    padding-top:20px;
 }
 
 .card-content{
@@ -94,7 +140,7 @@ h2 {
     flex-wrap: wrap;
     width: 280px;
     height: 180px;
-    text-align: center;
+    text-align: left;
     margin-top: 10px;
     padding: 10px 0px;
     background-color: rgb(0, 0, 0);
@@ -107,16 +153,21 @@ button{
 display: flex;
 position: relative;
 flex-wrap: wrap;
-width: 80px;
+justify-content: center;
+width: 200px;
 height: 20px;
 top: -30px;
 border-radius: 10px;
-
+opacity: 0.5;
+background-color: black;
+color: white;
+cursor: pointer;
 }
 
 button a{
     text-align: center;
     text-decoration: none;
+    color: white;
 }
 
 .cards img{
@@ -127,9 +178,9 @@ button a{
 }
 
 footer{
-    display: flexbox;
-    align-items: center;
-    justify-content:flex-start ;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
     width: 100%;
     height: 200px;
     background-color:  rgb(151, 29, 151);
