--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ header{
     display: flex;
     align-items: center;
     justify-content:space-between ;
-    width: 100%;
+    width: 425px;
     height: 50px;
     background-color: rgb(151, 29, 151);
     padding: 0 20px;
@@ -28,14 +28,15 @@ header img{
     width: 50px;
 }
 
-.container-header{
+.container-banner{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .banner{
-    width: 100%;
+    width: 425px;
     height: 100vh;
     background-image: url("../img/bannergames.webp");
     background-size: cover;
@@ -44,11 +45,23 @@ header img{
     background-attachment: fixed;
 }
 
+.btn-banner{
+    display: flex;
+    align-items: center;
+    position: relative;
+    top: 100px;
+    height: 35px;
+    background-color: black;
+    opacity: 0.7;
+
+}
+
 h1{
     text-align: center;
     background-color:  rgb(151, 29, 151);;
     color: black;
     border-top:2px solid black;
+    width: 425px;
 }
 
 .start{
@@ -57,7 +70,7 @@ h1{
     align-items: center;
     position: absolute;
     flex-wrap: wrap;
-    top: 400px;
+    top: 350px;
     width: 50%;
     left: 100px;
 }
@@ -85,7 +98,7 @@ main {
     display: flex;
     flex-direction: row;
     height: 100%;
-    width: 100%;
+    width: 425px;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap; 
@@ -101,7 +114,7 @@ main {
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 100%;
+    width: 425px;
     height: 100%;
     padding: 10px 0;
 }
@@ -181,8 +194,8 @@ footer{
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    width: 100%;
-    height: 200px;
+    width: 425px;
+    height: 400px;
     background-color:  rgb(151, 29, 151);
     padding: 0 20px;
     gap: 10px;
