--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 body{
     max-width: 425px;
     font-family: 'roboto', sans-serif;
+    letter-spacing: 2px;
 }
 
 
@@ -15,27 +16,32 @@ header{
     align-items: center;
     justify-content:space-between ;
     width: 425px;
-    height: 50px;
-    background-color: rgb(151, 29, 151);
+    height: 70px;
+    background-color: rgb(66, 2, 66);
     padding: 0 20px;
 }
 
+header li{
+    list-style: none;
+}
+
 header a{
-    color: black;
+    color: white;
+    margin: 20px;
+    text-decoration: none;
+
 }
 
 header img{
     width: 50px;
 }
 
-.container-banner{
+.banner{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-}
-
-.banner{
+    flex-wrap: wrap;
+    flex-direction: column;
     width: 425px;
     height: 100vh;
     background-image: url("../img/bannergames.webp");
@@ -45,52 +51,50 @@ header img{
     background-attachment: fixed;
 }
 
+.ver-mais{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .btn-banner{
     display: flex;
     align-items: center;
-    position: relative;
-    top: 100px;
-    height: 35px;
+    justify-content: center;
+    font-family: 'roboto';
+    font-size: 20px;
+    height: 50px;
+    width: 300px;
     background-color: black;
     opacity: 0.7;
+    margin-top: 40px;
 
+}
+
+.ver-mais h1{
+    color: red;
+    margin-right: 200px;
+}
+
+.ver-mais p{
+    display: flex;
+
+    color: white;
+    width: 70%;
+    font-size: 15px;
 }
 
 h1{
-    text-align: center;
-    background-color:  rgb(151, 29, 151);;
-    color: black;
-    border-top:2px solid black;
-    width: 425px;
-}
-
-.start{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    flex-wrap: wrap;
-    top: 350px;
-    width: 50%;
-    left: 100px;
-}
-
-#start{
-    color: red;
-    background-color: rgba(0, 0, 0, 0);
-    border-top: 0;
-    width: 300px;
-    text-align: left;
-    font-size: 25px;
-
-}
-
-.start p{
     color: white;
-    position: absolute;
-    width: 200px;
-    top: 40px;
-    left: 0px;
+    background-color: rgb(66, 2, 66);
+    text-align: center;
+    font-size: 20px;
 }
 
 main {
@@ -102,10 +106,11 @@ main {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap; 
-    margin-bottom: 10px;
+
     background-image: url("../img/bannergames.webp");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .container{
@@ -119,12 +124,11 @@ main {
     padding: 10px 0;
 }
 
-
 .cards{
     display: flex;
     flex-wrap: wrap;
     width: 300px;
-    height: 410px;
+    height: 450px;
     border: 1px solid whitesmoke;
     margin-top: 20px;
     background-color: rgb(66, 2, 66);
@@ -143,6 +147,7 @@ h2 {
     flex-wrap: wrap;
     width: 100%;
     margin-bottom: 190px;
+    height: 200px;
     color: Pink;
 }
 
@@ -152,10 +157,10 @@ h2 {
     align-items: flex-start;
     flex-wrap: wrap;
     width: 280px;
-    height: 180px;
+    height: 230px;
     text-align: left;
     margin-top: 10px;
-    padding: 10px 0px;
+    padding: 10px 10px;
     background-color: rgb(0, 0, 0);
     opacity: 0.5;
     color: white;
@@ -194,15 +199,30 @@ footer{
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    flex-wrap: wrap;
     width: 425px;
     height: 400px;
-    background-color:  rgb(151, 29, 151);
+    background-color:rgb(66, 2, 66);
     padding: 0 20px;
-    gap: 10px;
+    gap: 5px;
+    font-size: 14px;
+    color: pink;
 }
 
+footer h2{
+    display: flex;
+    text-align: left;
 
+}
 
 footer img{
-    width: 15px;
+    width: 25px;
+    margin-right: 5px;
+    border-radius: 100%;
+}
+
+footer h4{
+margin-left: 25%;
+margin-top: 30px;
+color: pink;
 }
