--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    text-decoration: none;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -74,7 +76,6 @@ header img{
     background-color: black;
     opacity: 0.7;
     margin-top: 40px;
-
 }
 
 .ver-mais h1{
@@ -90,7 +91,7 @@ header img{
     font-size: 15px;
 }
 
-h1{
+#games{
     color: white;
     background-color: rgb(66, 2, 66);
     text-align: center;
