--- a/css/index.css
+++ b/css/index.css
@@ -62,7 +62,7 @@ header img{
     width: 100%;
     gap: 10px;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .btn-banner{
@@ -70,28 +70,45 @@ header img{
     align-items: center;
     justify-content: center;
     font-family: 'roboto';
-    font-size: 20px;
+    font-size: 25px;
     height: 50px;
     width: 300px;
-    background-color: black;
+    background-color: purple;
     opacity: 0.7;
-    margin-top: 40px;
+    margin-top: 50px;
+    box-shadow: 0px 3px 2px purple;
+}
+
+.container-ver-mais{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 425px;
+    height: 100%;
+    padding: 10px 0;
+    gap: 10px;
 }
 
 .ver-mais h1{
+    width: 70%;
     color: red;
-    margin-right: 200px;
+    opacity: 0.8;
+    font-size: 40px;
+    text-align: left;
 }
 
 .ver-mais p{
-    display: flex;
-
+    text-align: left;
     color: white;
     width: 70%;
-    font-size: 15px;
+    font-size: 18px;
 }
 
+
 #games{
+    width: 425px;
     color: white;
     background-color: rgb(66, 2, 66);
     text-align: center;
@@ -134,7 +151,7 @@ main {
     margin-top: 20px;
     background-color: rgb(66, 2, 66);
     border-radius: 10px;
-    box-shadow: 10px 10px 10px purple;
+    box-shadow: 5px 10px 10px purple;
 }
 
 h2 {
@@ -169,18 +186,18 @@ h2 {
 }
 
 button{
-display: flex;
-position: relative;
-flex-wrap: wrap;
-justify-content: center;
-width: 200px;
-height: 20px;
-top: -30px;
-border-radius: 10px;
-opacity: 0.5;
-background-color: black;
-color: white;
-cursor: pointer;
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 200px;
+    height: 20px;
+    top: -30px;
+    border-radius: 10px;
+    opacity: 0.5;
+    background-color: black;
+    color: white;
+    cursor: pointer;
 }
 
 button a{
@@ -201,29 +218,651 @@ footer{
     align-items: flex-start;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 425px;
+    width: 100%;
     height: 400px;
     background-color:rgb(66, 2, 66);
     padding: 0 20px;
-    gap: 5px;
+    gap: 10px;
     font-size: 14px;
     color: pink;
 }
 
-footer h2{
-    display: flex;
-    text-align: left;
-
-}
-
 footer img{
-    width: 25px;
-    margin-right: 5px;
-    border-radius: 100%;
+    width:15px;
 }
 
-footer h4{
-margin-left: 25%;
-margin-top: 30px;
-color: pink;
+#aluno1{
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+#aluno1 p{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+#aluno2{
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+#aluno2 p{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+#aluno3{
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+#aluno3 p{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+#copyright{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 30px;
+}
+
+/* Ajuste para resolução até 1280px */
+
+@media (min-width: 426px) and (max-width: 1280px){
+    body{
+        max-width: 1280px;
+        font-family: 'roboto', sans-serif;
+        letter-spacing: 2px;
+    }
+
+    header{
+        display: flex;
+        align-items: center;
+        justify-content:space-between ;
+        width: 100%;
+        height: 90px;
+        background-color: rgb(66, 2, 66);
+        padding: 10px 50px;
+    }
+
+    header li{
+        list-style: none;
+        display: inline-flex;
+    }
+
+    .nav-btn{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        border-radius: 20px;
+        width: 100px;
+        height: 30px;
+        font-size: 18px;
+    }
+
+    #color{
+        color: red;
+    }
+
+    header a{
+        color: white;
+        margin: 20px;
+        text-decoration: none;
+    }
+
+    header img{
+        width: 70px;
+    }
+
+    .banner{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background-image: url("../img/bannergames.webp");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center top;
+        background-attachment: fixed;
+    }
+
+    .ver-mais{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 10px;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .btn-banner{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'roboto';
+        font-size: 20px;
+        height: 50px;
+        width: 300px;
+        background-color: purple;
+        opacity: 0.7;
+        margin-top: 90px;
+        border: 2px solid black;
+    }
+
+    .container-ver-mais{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 50%;
+        height: 100%;
+        padding: 10px 0;
+        gap: 10px;
+    }
+
+    .ver-mais h1{
+        width: 100%;
+        text-align: left;
+        color: red;
+        opacity: 0.8;
+        font-size: 50px;
+    }
+
+    .ver-mais p{
+        text-align: left;
+        width: 100%;
+        color: white;
+        font-size: 15px;
+
+    }
+
+    #games{
+        width: 100%;
+        color: white;
+        background-color: rgb(66, 2, 66);
+        text-align: center;
+        font-size: 20px;
+    }
+
+    main {
+        padding: 0px 10px;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap; 
+        background-image: url("../img/bannergames.webp");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
+    .container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+        padding: 10px 0px;
+    }
+
+    .cards{
+        display: flex;
+        flex-wrap: wrap;
+        width: 400px;
+        height: 450px;
+        border: 1px solid whitesmoke;
+        margin-top: 20px;
+        background-color: rgb(66, 2, 66);
+        border-radius: 10px;
+        box-shadow: 5px 5px 5px purple;
+        margin-left: 10px;
+    }
+
+    h2 {
+        text-align: center;
+        padding-top:20px;
+    }
+
+    .card-content{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        color: Pink;
+    }
+
+    .card-text{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        width: 400px;
+        height: 230px;
+        text-align: left;
+        margin-top: 10px;
+        padding: 10px 10px;
+        background-color: rgb(0, 0, 0);
+        opacity: 0.5;
+        color: white;
+        border-radius: 10px;
+        padding-bottom: 100px;
+    }
+
+    button{
+        display: flex;
+        position: relative;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 50px;
+        top: -70px;
+        border-radius: 10px;
+        opacity: 0.5;
+        background-color: black;
+        color: white;
+        cursor: pointer;
+    }
+
+    button a{
+        text-align: center;
+        text-decoration: none;
+        color: white;
+    }
+
+    .cards img{
+        display: flex;
+        width: 100%;
+        height: 150px;
+        border-radius: 10px;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 250px;
+        background-color:rgb(66, 2, 66);
+        padding: 40px 20px;
+        gap: 5px;
+        font-size: 14px;
+        color: pink;
+    }
+
+
+    #aluno1{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    #aluno1 p{
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    #aluno2{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #aluno2 p{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    #aluno3{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+    }
+
+    #aluno3 p{
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #copyright{
+        position: relative;
+        right: 825px;
+        width: 100%;
+    }
+
+
+
+}
+
+@media (min-width: 1281px) and (max-width: 3000px){
+    body{
+        max-width: 3000px;
+        font-family: 'roboto', sans-serif;
+        letter-spacing: 2px;
+    }
+
+    header{
+        display: flex;
+        align-items: center;
+        justify-content:space-between ;
+        width: 100%;
+        height: 90px;
+        background-color: rgb(66, 2, 66);
+        padding: 10px 50px;
+    }
+
+    header li{
+        list-style: none;
+        display: inline-flex;
+    }
+
+    .nav-btn{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        border-radius: 20px;
+        width: 100px;
+        height: 30px;
+        font-size: 18px;
+    }
+
+    #color{
+        color: red;
+    }
+
+    header a{
+        color: white;
+        margin: 20px;
+        text-decoration: none;
+    }
+
+    header img{
+        width: 70px;
+    }
+
+    .banner{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background-image: url("../img/bannergames.webp");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center top;
+        background-attachment: fixed;
+    }
+
+    .ver-mais{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 10px;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .btn-banner{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'roboto';
+        font-size: 50px;
+        height: 100px;
+        width: 500px;
+        background-color: purple;
+        opacity: 0.7;
+        margin-top: 90px;
+        border: 2px solid black;
+    }
+
+    .container-ver-mais{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 50%;
+        height: 100%;
+        padding: 10px 0;
+        gap: 10px;
+    }
+
+    .ver-mais h1{
+        width: 100%;
+        text-align: left;
+        color: red;
+        opacity: 0.8;
+        font-size:100px;
+    }
+
+    .ver-mais p{
+        text-align: left;
+        width: 100%;
+        color: white;
+        font-size: 50px;
+
+    }
+
+    #games{
+        width: 100%;
+        color: white;
+        background-color: rgb(66, 2, 66);
+        text-align: center;
+        font-size: 50px;
+    }
+
+    main {
+        padding: 50px 0px;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap; 
+        background-image: url("../img/bannergames.webp");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
+    .container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+        padding: 10px 0px;
+    }
+
+    .cards{
+        display: flex;
+        flex-wrap: wrap;
+        width: 700px;
+        height: 500px;
+        border: 1px solid whitesmoke;
+        margin-top: 20px;
+        background-color: rgb(66, 2, 66);
+        border-radius: 10px;
+        box-shadow: 5px 5px 5px purple;
+        margin-left: 30px;
+    }
+
+    h2 {
+        text-align: center;
+        padding-top:20px;
+    }
+
+    .card-content{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 300px;
+        color: Pink;
+    }
+
+    .card-text{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        width: 680px;
+        height: 230px;
+        text-align: left;
+        margin-top: 10px;
+        padding: 10px 10px;
+        background-color: rgb(0, 0, 0);
+        opacity: 0.5;
+        color: white;
+        border-radius: 10px;
+        padding-bottom: 100px;
+    }
+
+    button{
+        display: flex;
+        position: relative;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 50px;
+        top: -70px;
+        border-radius: 10px;
+        opacity: 0.5;
+        background-color: black;
+        color: white;
+        cursor: pointer;
+    }
+
+    button a{
+        text-align: center;
+        text-decoration: none;
+        color: white;
+    }
+
+    .cards img{
+        display: flex;
+        width: 100%;
+        height: 200px;
+        border-radius: 10px;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 250px;
+        background-color:rgb(66, 2, 66);
+        padding: 40px 20px;
+        gap: 5px;
+        font-size: 14px;
+        color: pink;
+
+    }
+
+    footer img{
+        width: 30px;
+        border-radius: 100%;
+    }
+
+    #aluno1{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    #aluno1 p{
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    #aluno2{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #aluno2 p{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    #aluno3{
+        width: 33.33%;
+        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+    }
+
+    #aluno3 p{
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #copyright{
+        position: relative;
+        right: 1670px;
+        width: 100%;
+    }
+
+
+
 }
