--- a/css/bloodborne.css
+++ b/css/bloodborne.css
@@ -10,6 +10,9 @@ body{
     max-width: 425px;
     font-family: 'roboto', sans-serif;
     letter-spacing: 2px;
+    overflow-x: hidden;
+    background-color: black;
+
 }
 
 
