--- a/css/doom.css
+++ b/css/doom.css
@@ -10,6 +10,8 @@ body{
     max-width: 425px;
     font-family: 'roboto', sans-serif;
     letter-spacing: 2px;
+    background-color: black;
+    overflow-x: hidden;
 }
 
 
