--- a/css/elden.css
+++ b/css/elden.css
@@ -10,6 +10,8 @@ body{
     max-width: 425px;
     font-family: 'roboto', sans-serif;
     letter-spacing: 2px;
+    overflow-x: hidden;
+    background-color: black;
 }
 
 
@@ -106,6 +108,26 @@ header img{
     font-size: 18px;
 }
 
+main {
+    padding: 0px 10px;
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 425px;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap; 
+    background-image: url("../img/bannergames.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.about{
+    color: aliceblue;
+    text-align: center;
+}
+
 .container{
     display: flex;
     flex-wrap: wrap;
@@ -118,6 +140,10 @@ header img{
 
 iframe{
     width: 100%;
+}
+
+.container h2{
+    color: aliceblue;
 }
 
 footer{
