--- a/css/menu2.css
+++ b/css/menu2.css
@@ -1,28 +1,28 @@
+*{
+ margin: 0;
+ padding: 0; 
+ box-sizing: border-box;
+}
 body{
-
-    margin: 0;
-    padding: 0;
-    background: #232323;
-    color: #cdcdcd;
-    font-family: Arial, Helvetica, sans-serif;
-
+    overflow-x: hidden;
 }
 
 #menuToggle{
 
     display: block;
     position: relative;
-    top: 50px;
-    left: 50px;
+    top: 0px;
+    left: 0px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
+
 
 }
 
 #menuToggle a:hover{
 
-    color: tomato;
+    color: red;
 
 }
 
@@ -39,6 +39,7 @@ body{
     z-index: 2;
     -webkit-touch-callout: none;
 
+  
 }
 
 #menuToggle span{
@@ -72,7 +73,7 @@ body{
 
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
+    background: purple;
     
 }
 
@@ -88,28 +89,37 @@ body{
 #menu
 {
   position: absolute;
-  width: 300px;
-  margin: -100px 0 0 -50px;
+  width: 190px;
+  margin: -100px 60px 0px 60px;
   padding: 50px;
   padding-top: 125px;
-  
-  background: #ededed;
+  left: -200px;
+  background: black;
+  opacity: 0.8;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
   
   transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
+  transform: translate(100%, 0);
   
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 #menu li
 {
+
   padding: 10px 0;
   font-size: 22px;
 }
+
+#menu a{
+  
+  color: white;
+}
+
 #menuToggle input:checked ~ ul
 {
+  
   transform: none;
 }
 
