--- a/css/index.css
+++ b/css/index.css
@@ -123,6 +123,83 @@ nav{
     font-size: 20px;
 }
 
+.modal{ 
+    position: fixed;
+    visibility: hidden;
+    top: 25%;
+    left: 15%;
+    width: 49vw;
+    height: 78vh;
+    opacity: 1;
+    border-radius: 100px;
+    border-radius: 14px;
+    z-index: 1;
+} 
+
+
+
+.modal:target
+{
+    visibility: visible;
+    opacity: 1;
+    
+} 
+
+.joystick{
+    position: absolute;
+    top: 9%;
+    left: 50%;
+    right: 0%;
+    bottom: 0%; 
+    width: 100px;
+    height: 100px;
+
+}
+
+.login
+{
+    color: white;
+    position: absolute;
+    top: 29%;
+    left: 30%;
+    right: 0%;
+    bottom: 1%;
+    width: 111px;
+    height: 108px;
+}
+
+
+.background
+{
+    position: relative;
+    top: -5%;
+    left: 0%;
+    right: 0%;
+    bottom: 1%;
+    width: 70vw;
+    height: 50vh;
+    opacity: 143%;
+    z-index: -2;
+    border-radius: 14px;
+}
+
+.btn_Enviar
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'roboto';
+    font-size: 19px;
+    height: 36px;
+    width: 175px;
+    background-color: purple;
+    opacity: .9;
+    color: white;
+    margin-top: 17px;
+    box-shadow: 0px 3px 2px purple;
+    cursor: pointer;
+}
+
 main {
     padding: 0px 10px;
     display: flex;
