--- a/css/index.css
+++ b/css/index.css
@@ -9,21 +9,24 @@
 
 body{
     max-width: 425px;
+    width: 425px;
     font-family: 'roboto', sans-serif;
     letter-spacing: 2px;
-    overflow-x: hidden;
     background-color: black;
 }
 
 
 header{
     display: flex;
+    position: fixed;
     align-items: center;
     justify-content:space-between ;
     width: 425px;
     height: 70px;
     background-color: rgb(66, 2, 66);
     padding: 0 20px;
+    z-index: 2;
+
 }
 
 header li{
@@ -121,8 +124,9 @@ nav{
     background-color: rgb(66, 2, 66);
     text-align: center;
     font-size: 20px;
+    z-index: 4;
 }
-
+/*Começo Modal*/
 .modal{ 
     position: fixed;
     visibility: hidden;
@@ -135,8 +139,6 @@ nav{
     border-radius: 14px;
     z-index: 1;
 } 
-
-
 
 .modal:target
 {
@@ -168,7 +170,6 @@ nav{
     height: 108px;
 }
 
-
 .background
 {
     position: relative;
@@ -199,9 +200,9 @@ nav{
     box-shadow: 0px 3px 2px purple;
     cursor: pointer;
 }
-
+/*Fim Modal*/
 main {
-    padding: 0px 10px;
+    padding: 20px 10px;
     display: flex;
     flex-direction: row;
     height: 100%;
@@ -223,15 +224,14 @@ main {
     flex-direction: column;
     width: 425px;
     height: 100%;
-    padding: 10px 0;
+    padding: 0px 0;
 }
 
 .cards{
     display: flex;
     flex-wrap: wrap;
     width: 300px;
-    height: 450px;
-    border: 1px solid whitesmoke;
+    height: 500px;
     margin-top: 20px;
     background-color: rgb(66, 2, 66);
     border-radius: 10px;
@@ -249,7 +249,7 @@ h2 {
     flex-wrap: wrap;
     width: 100%;
     margin-bottom: 190px;
-    height: 200px;
+    height: 300px;
     color: Pink;
 }
 
@@ -259,7 +259,7 @@ h2 {
     align-items: flex-start;
     flex-wrap: wrap;
     width: 280px;
-    height: 230px;
+    height: 280px;
     text-align: left;
     margin-top: 10px;
     padding: 10px 10px;
@@ -267,6 +267,11 @@ h2 {
     opacity: 0.5;
     color: white;
     border-radius: 10px;
+}
+
+.card-text > p{
+    text-align: center;
+
 }
 
 button{
@@ -300,19 +305,19 @@ button a{
 footer{
     display: flex;
     align-items: flex-start;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 400px;
+    height: 500px;
     background-color:rgb(66, 2, 66);
-    padding: 0 20px;
-    gap: 10px;
+    padding: 10px 20px;
+    gap: 5px;
     font-size: 14px;
     color: pink;
 }
 
 footer img{
-    width:15px;
+    width:20px;
 }
 
 #aluno1{
@@ -363,7 +368,11 @@ footer img{
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 30px;
+    padding-bottom: 20px;
+}
+
+#git{
+    border-radius: 100%;
 }
 
 /* Ajuste para resolução até 1280px */
@@ -371,8 +380,10 @@ footer img{
     @media (min-width: 426px) and (max-width: 1280px){
     body{
         max-width: 1280px;
+        width: 100%;
         font-family: 'roboto', sans-serif;
         letter-spacing: 2px;
+        overflow-x: hidden;
     }
 
     header{
