Adicionando responsividade 1280px para todas as pages

--- a/css/burguer.css
+++ b/css/burguer.css
@@ -8,7 +8,6 @@
  }
  
  #menuToggle{
- 
      display: block;
      position: relative;
      top: 0px;
@@ -117,3 +116,10 @@
    transform:none;
  }
  
+
+ @media(min-width:426px) and (max-width:1280px){
+  #menuToggle{
+    display: none;
+ }
+
+}
