--- a/css/elden.css
+++ b/css/elden.css
@@ -137,11 +137,20 @@ nav{
     opacity: 1;
     
 } 
+.fecharModal{
+    position: fixed;
+    top: 24%;
+    left: 17%;
+    right: 0%;
+    bottom: 0%;
+    width: 6rem;
+
+}
 
 .joystick{
     position: absolute;
     top: 9%;
-    left: 50%;
+    left: 53%;
     right: 0%;
     bottom: 0%; 
     width: 100px;
@@ -149,12 +158,13 @@ nav{
 
 }
 
+
 .login
 {
     color: white;
     position: absolute;
-    top: 29%;
-    left: 30%;
+    top: 24%;
+    left: 80%;
     right: 0%;
     bottom: 1%;
     width: 111px;
@@ -538,10 +548,20 @@ footer img{
         
     } 
 
+    .fecharModal{
+        position: fixed;
+        top: 24%;
+        left: 17%;
+        right: 0%;
+        bottom: 0%;
+        width: 6rem;
+
+    }
+
     .joystick{
         position: absolute;
         top: 9%;
-        left: 66%;
+        left: 53%;
         right: 0%;
         bottom: 0%; 
         width: 100px;
@@ -553,8 +573,8 @@ footer img{
     {
         color: white;
         position: absolute;
-        top: 29%;
-        left: 60%;
+        top: 25%;
+        left: 47%;
         right: 0%;
         bottom: 1%;
         width: 111px;
@@ -851,7 +871,7 @@ footer img{
             align-items: center;
             flex-wrap: wrap;
             flex-direction: column;
-            width: 100%;
+            width: 100vw;
             height: 100vh;
             background-image: url("../img/bannergames.webp");
             background-size: cover;
@@ -927,6 +947,16 @@ footer img{
             z-index: 1;
         } 
 
+        .fecharModal{
+            position: fixed;
+            top: 24%;
+            left: 17%;
+            right: 0%;
+            bottom: 0%;
+            width: 6rem;
+
+        }
+
         .modal:target
         {
             visibility: visible;
@@ -937,7 +967,7 @@ footer img{
         .joystick{
             position: absolute;
             top: 9%;
-            left: 50%;
+            left: 81%;
             right: 0%;
             bottom: 0%; 
             width: 100px;
@@ -949,8 +979,8 @@ footer img{
         {
             color: white;
             position: absolute;
-            top: 29%;
-            left: 30%;
+            top: 28%;
+            left: 77%;
             right: 0%;
             bottom: 1%;
             width: 111px;
@@ -961,7 +991,7 @@ footer img{
         {
             position: relative;
             top: -5%;
-            left: 0%;
+            left: 18%;
             right: 0%;
             bottom: 1%;
             width: 70vw;
